--- a/client/imports/app/home/home.component.html
+++ b/client/imports/app/home/home.component.html
@@ -2,4 +2,6 @@
     <a class="navbar-brand" href="#">Accueil</a>
     <a class="navbar-brand" href="#">Meilleurs projets</a>
     <a class="navbar-brand" href="#">Créer un projet</a>
+
+    <a class="navbar-brand navbar-right" href="#">Connexion/Inscription</a>
 </nav>
