--- a/client/imports/app/home/home.component.html
+++ b/client/imports/app/home/home.component.html
@@ -1,9 +1,30 @@
-<div class="row">
-    <ul>
-        <li *ngFor="let project of projects | async">
-            <a [routerLink]="['/project', project._id]">{{project.name}}</a>
-            <p>{{project.name}}</p>
-            <button (click)="removeParty(project)">X</button>
-        </li>
+<div class="collapse navbar-collapse">
+    <ul class="nav navbar-nav">
+        <li><a href="#">Accueil</a></li>
+        <li><a href="#">Les meilleurs projets</a></li>
+        <li><a href="#">Créer mon projet</a></li>
     </ul>
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Connection/Inscription</a></li>
+    </ul>
+</div>
+
+<div class="col-lg-12">
+    <div *ngFor="let project of projects | async">
+        <div class="col-lg-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <a [routerLink]="['/project', project._id]">Projet #X - {{project.name}}</a>
+                </div>
+                <div class="panel-body">
+                    <span class="col-lg-12">Gains : {{project.gain}} € / mois</span>
+                    <span class="col-lg-12">Créé le : {{project.creationDate}}</span>
+                </div>
+                <div style="border: 2px solid black">
+                    <span> {{project.description}}</span>
+                </div>
+                <button class="btn btn-default" (click)="removeParty(project)">Participer</button>
+            </div>
+        </div>
+    </div>
 </div>
