--- a/client/imports/app/home/home.component.html
+++ b/client/imports/app/home/home.component.html
@@ -1,14 +1,4 @@
-<div class="collapse navbar-collapse">
-    <ul class="nav navbar-nav">
-        <li><a href="#">Accueil</a></li>
-        <li><a href="#">Les meilleurs projets</a></li>
-        <li><a href="#">Créer mon projet</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Connection/Inscription</a></li>
-    </ul>
-</div>
-
+<home-navbar></home-navbar>
 <div class="col-lg-12">
     <div *ngFor="let project of projects | async">
         <div class="col-lg-4">
