[NAV] Add link to the navbar

--- a/client/imports/app/home/home-navbar.component.html
+++ b/client/imports/app/home/home-navbar.component.html
@@ -1,8 +1,8 @@
 <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
-        <li><a href="#">Accueil</a></li>
+        <li><a [routerLink]="['']">Accueil</a></li>
         <li><a href="#">Les meilleurs projets</a></li>
-        <li><a href="#">Créer mon projet</a></li>
+        <li><a [routerLink]="['/projectCreation']">Créer mon projet</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Connection/Inscription</a></li>
