[PROJECT] Setup page architecture

--- a/client/imports/app/projectManagement/project-creation.component.html
+++ b/client/imports/app/projectManagement/project-creation.component.html
@@ -7,8 +7,36 @@
                 <h2>Informations générales</h2>
             </div>
             <div class="row">
-                <span>TOTO</span>
+                <span>Nom du projet</span>
+                <input />
             </div>
+            <div class="row">
+                <span>Description</span>
+                <input />
+            </div>
+            <div class="row">
+                <span>Auteur</span>
+                <input />
+            </div>
+            <button> Enregistrer les modifications</button>
         </div>
+    </div>
+    <div class="col-lg-6">
+        <div class="row">
+            <h2>Informations générales</h2>
+        </div>
+        <div class="row">
+            <span>Nom du projet</span>
+            <input />
+        </div>
+        <div class="row">
+            <span>Description</span>
+            <input />
+        </div>
+        <div class="row">
+            <span>Auteur</span>
+            <input />
+        </div>
+        <button> Enregistrer les modifications</button>
     </div>
 </div>
