--- a/client/imports/app/projectManagement/project-creation.component.html
+++ b/client/imports/app/projectManagement/project-creation.component.html
@@ -2,41 +2,74 @@
 <div class="col-lg-12">
     <h1> Mon projet </h1>
     <div class="col-lg-6">
-        <div class="container">
-            <div class="row">
-                <h2>Informations générales</h2>
+        <div class="panel panel-default">
+            <div class="panel-heading">Informations générales</div>
+            <div class="panel-body">
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <label class="col-lg-2 control-label">Nom du projet</label>
+                        <div class="col-lg-10">
+                            <input class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-lg-2 control-label">Description</label>
+                        <div class="col-lg-10">
+                            <input class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-lg-2 control-label">Auteur</label>
+                        <div class="col-lg-10">
+                            <input class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-lg-offset-2 col-lg-10">
+                            <!--<button type="submit" class="btn btn-default">Sign in</button>-->
+                            <button class="btn btn-success"> Enregistrer les modifications</button>
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div class="row">
-                <span>Nom du projet</span>
-                <input />
-            </div>
-            <div class="row">
-                <span>Description</span>
-                <input />
-            </div>
-            <div class="row">
-                <span>Auteur</span>
-                <input />
-            </div>
-            <button> Enregistrer les modifications</button>
         </div>
     </div>
     <div class="col-lg-6">
-        <div class="row">
-            <h2>Informations générales</h2>
+        <div class="panel panel-default">
+            <div class="panel-heading">Contreparties</div>
+            <div class="panel-body">
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <label class="col-lg-2 control-label">Titre</label>
+                        <div class="col-lg-10">
+                            <input class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-lg-2 control-label">Valeur (en € / mois)</label>
+                        <div class="col-lg-10">
+                            <input class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-lg-2 control-label">Description</label>
+                        <div class="col-lg-10">
+                            <input class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-lg-offset-2 col-lg-10">
+                            <button class="btn btn-success">Ajouter une contrepartie</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
-        <div class="row">
-            <span>Nom du projet</span>
-            <input />
-        </div>
-        <div class="row">
-            <span>Description</span>
-            <input />
-        </div>
-        <div class="row">
-            <span>Auteur</span>
-            <input />
-        </div>
-        <button> Enregistrer les modifications</button>
     </div>
 </div>
