--- a/client/imports/app/home/home.component.html
+++ b/client/imports/app/home/home.component.html
@@ -1,19 +1,26 @@
 <home-navbar></home-navbar>
-<div class="col-lg-12">
+<div class="col-xs-12">
     <div *ngFor="let project of projects | async">
-        <div class="col-lg-4">
+        <div class="col-xs-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <a [routerLink]="['/project', project._id]">Projet #X - {{project.name}}</a>
                 </div>
                 <div class="panel-body">
-                    <span class="col-lg-12">Gains : {{project.gain}} € / mois</span>
-                    <span class="col-lg-12">Créé le : {{project.creationDate}}</span>
+                    <div class="col-xs-12">
+                        <label class="control-label">Gains : </label><span> {{project.gain}} € / mois</span>
+                    </div>
+
+                    <div class="col-xs-12">
+                        <label class="control-label">Créé le : </label><span> {{project.creationDate}}</span>
+                    </div>
+
+                    <div class="col-xs-12">
+                        <label class="control-label">Description : </label> <span> {{project.description}}</span>
+                    </div>
+
+                    <button class="btn btn-default col-lg-offset-9" (click)="removeParty(project)">Participer</button>
                 </div>
-                <div style="border: 2px solid black">
-                    <span> {{project.description}}</span>
-                </div>
-                <button class="btn btn-default" (click)="removeParty(project)">Participer</button>
             </div>
         </div>
     </div>
