[COMP] Can now localy add compensation

--- a/client/imports/app/projectManagement/project-creation.component.html
+++ b/client/imports/app/projectManagement/project-creation.component.html
@@ -29,7 +29,6 @@
 
                     <div class="form-group">
                         <div class="col-lg-offset-2 col-lg-10">
-                            <!--<button type="submit" class="btn btn-default">Sign in</button>-->
                             <button type="submit" class="btn btn-success"> Enregistrer les modifications</button>
                         </div>
                     </div>
@@ -41,34 +40,39 @@
         <div class="panel panel-default">
             <div class="panel-heading">Contreparties</div>
             <div class="panel-body">
-                <form class="form-horizontal">
+                <form class="form-horizontal" [formGroup]="compensationsForm" (ngSubmit)="addCompensation()">
                     <div class="form-group">
                         <label class="col-lg-2 control-label">Titre</label>
                         <div class="col-lg-10">
-                            <input class="form-control">
+                            <input class="form-control" formControlName="title">
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="col-lg-2 control-label">Valeur (en € / mois)</label>
                         <div class="col-lg-10">
-                            <input class="form-control">
+                            <input class="form-control" formControlName="value">
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="col-lg-2 control-label">Description</label>
                         <div class="col-lg-10">
-                            <input class="form-control">
+                            <input class="form-control" formControlName="description">
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="col-lg-offset-2 col-lg-10">
-                            <button class="btn btn-success">Ajouter une contrepartie</button>
+                            <button type="submit" class="btn btn-success">Ajouter une contrepartie</button>
                         </div>
                     </div>
                 </form>
+                <div *ngFor="let compensation of compensationFormList">
+                    <div>
+                        {{compensation.title}}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
