[COMP] Add modify and delete button

--- a/client/imports/app/projectManagement/project-creation.component.html
+++ b/client/imports/app/projectManagement/project-creation.component.html
@@ -80,9 +80,12 @@
                                 <label class="col-lg-2 control-label">Description</label>
                                 <div class="col-lg-10"><span>{{compensation.description}}</span></div>
                             </div>
+                            <div class="row">
+                                <button class="col-lg-offset-8 btn btn-warning">Modifier</button>
+                                <button class="btn btn-danger">Supprimer</button>
+                            </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
