[COMP] Delete compensation

--- a/client/imports/app/projectManagement/project-creation.component.html
+++ b/client/imports/app/projectManagement/project-creation.component.html
@@ -82,7 +82,7 @@
                             </div>
                             <div class="row">
                                 <button class="col-lg-offset-8 btn btn-warning">Modifier</button>
-                                <button class="btn btn-danger">Supprimer</button>
+                                <button class="btn btn-danger" (click)="deleteCompensation(compensation)">Supprimer</button>
                             </div>
                         </div>
                     </div>
