[USER] Check if user logged in in html

--- a/client/imports/app/projectManagement/project-creation.component.html
+++ b/client/imports/app/projectManagement/project-creation.component.html
@@ -1,3 +1,5 @@
+<div *ngIf="!user">Please, log in to change the project</div>
+
 <home-navbar></home-navbar>
 <div class="col-lg-12">
     <h1> Mon projet </h1>
