[COMP] Add compensation

--- a/client/imports/app/home/home-navbar.component.html
+++ b/client/imports/app/home/home-navbar.component.html
@@ -5,6 +5,7 @@
         <li><a [routerLink]="['/projectCreation']">Créer mon projet</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Connection/Inscription</a></li>
+        <login-buttons></login-buttons>
     </ul>
 </div>
+
