[DISP] Display of the projects description

--- a/client/imports/app/projectManagement/project-creation.component.html
+++ b/client/imports/app/projectManagement/project-creation.component.html
@@ -1,7 +1,7 @@
+<home-navbar></home-navbar>
 <div *ngIf="!user">Please, log in to change the project</div>
 
-<home-navbar></home-navbar>
-<div class="col-lg-12">
+<div class="col-lg-12" *ngIf="user">
     <h1> Mon projet </h1>
     <div class="col-lg-6">
         <div class="panel panel-default">
