[DISP] Author's name displayed

--- a/client/imports/app/projectManagement/project-display.component.html
+++ b/client/imports/app/projectManagement/project-display.component.html
@@ -6,9 +6,9 @@
                 Hello {{projectId}}
             </div>
             <span>
-                {{description}}
+                {{project.description}}
             </span>
-            <label class="col-xs-12">Par :</label>
+            <label class="col-xs-12">Par : {{project.author}}</label>
             <label class="col-xs-12">Contact :</label>
         </div>
     </div>
