--- a/client/imports/app/projectManagement/project-display.component.html
+++ b/client/imports/app/projectManagement/project-display.component.html
@@ -26,10 +26,7 @@
                         <div class="col-lg-10"><span>{{compensation.description}}</span></div>
                     </div>
                     <div class="row">
-                        <button class="col-lg-offset-8 btn btn-warning" (click)="modifyCompensation(compensation)">
-                            Modifier
-                        </button>
-                        <button class="btn btn-danger" (click)="deleteCompensation(compensation)">Supprimer</button>
+                        <button class="btn btn-danger" [routerLink]="['/project', projectId, compensation.value]">Sélectionner</button>
                     </div>
                 </div>
             </div>
