--- a/client/imports/app/projectManagement/compensation-subscription.component.html
+++ b/client/imports/app/projectManagement/compensation-subscription.component.html
@@ -3,6 +3,15 @@
 <div class="col-xs-12">
     <h1>Je participe !</h1>
 </div>
+
 <div class="col-xs-12">
-    <span>toto</span>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <span>Titre du don </span>
+        </div>
+        <div class="panel-body">
+            <span> Desc</span>
+        </div>
+        <button class="btn btn-success">Select</button>
+    </div>
 </div>
