--- a/client/imports/app/home/home-navbar.component.html
+++ b/client/imports/app/home/home-navbar.component.html
@@ -1,7 +1,7 @@
 <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
         <li><a [routerLink]="['']">Accueil</a></li>
-        <li><a href="#">Les meilleurs projets</a></li>
+        <li><a [routerLink]="['/best']">Les meilleurs projets</a></li>
         <li><a [routerLink]="['/projectCreation']">Créer mon projet</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
