--- a/client/imports/app/home/home-navbar.component.html
+++ b/client/imports/app/home/home-navbar.component.html
@@ -1,4 +1,4 @@
-<div class="collapse navbar-collapse">
+<div class="navbar navbar-default">
     <ul class="nav navbar-nav">
         <li><a [routerLink]="['']">Accueil</a></li>
         <li><a [routerLink]="['/best']">Les meilleurs projets</a></li>
