--- a/client/imports/app/home/home.component.html
+++ b/client/imports/app/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="col-xs-12">
     <div *ngFor="let project of projects | async">
         <div class="col-xs-4">
-            <div class="panel panel-default">
+            <div class="panel panel-info">
                 <div class="panel-heading">
                     <span>Projet #X - {{project.name}}</span>
                 </div>
@@ -19,7 +19,7 @@
                         <label class="control-label">Description : </label> <span> {{project.description}}</span>
                     </div>
 
-                    <button class="btn btn-default col-lg-offset-9" [routerLink]="['/myproj', project._id]">Participer</button>
+                    <button class="btn btn-primary col-lg-offset-9" [routerLink]="['/projectDisplay', project._id]">Participer</button>
                 </div>
             </div>
         </div>
