--- a/client/imports/app/projectManagement/project-creation.component.html
+++ b/client/imports/app/projectManagement/project-creation.component.html
@@ -11,21 +11,21 @@
                     <div class="form-group">
                         <label class="col-lg-2 control-label">Nom du projet</label>
                         <div class="col-lg-10">
-                            <input class="form-control" formControlName="name">
+                            <input class="form-control" formControlName="name" required>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="col-lg-2 control-label">Description</label>
                         <div class="col-lg-10">
-                            <input class="form-control" formControlName="description">
+                            <input class="form-control" formControlName="description" pattern=".{140,}" required title="La description doit faire au minimum 140 caractères" >
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="col-lg-2 control-label">Auteur</label>
                         <div class="col-lg-10">
-                            <input class="form-control" formControlName="author">
+                            <input class="form-control" formControlName="author" required>
                         </div>
                     </div>
 
@@ -46,21 +46,21 @@
                     <div class="form-group">
                         <label class="col-lg-2 control-label">Titre</label>
                         <div class="col-lg-10">
-                            <input class="form-control" formControlName="title">
+                            <input class="form-control" formControlName="title" required>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="col-lg-2 control-label">Valeur (en € / mois)</label>
                         <div class="col-lg-10">
-                            <input class="form-control" formControlName="value">
+                            <input type="number" class="form-control" formControlName="value" required>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="col-lg-2 control-label">Description</label>
                         <div class="col-lg-10">
-                            <input class="form-control" formControlName="description">
+                            <input class="form-control" pattern=".{140,}" required title="La description doit faire au minimum 140 caractères" formControlName="description">
                         </div>
                     </div>
 
