--- a/client/imports/app/projectManagement/project-display.component.html
+++ b/client/imports/app/projectManagement/project-display.component.html
@@ -26,7 +26,7 @@
                         <div class="col-lg-10"><span>{{compensation.description}}</span></div>
                     </div>
                     <div class="row">
-                        <button class="btn btn-danger" [routerLink]="['/project', projectId]">Sélectionner</button>
+                        <button class="btn btn-danger" [routerLink]="['/compensationSub', projectId]">Sélectionner</button>
                     </div>
                 </div>
             </div>
